
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ REAL ;


 scalar_t__ cos (scalar_t__) ;
 scalar_t__ gdiplus_atan2 (scalar_t__,scalar_t__) ;
 scalar_t__ sin (scalar_t__) ;
 scalar_t__ sqrt (scalar_t__) ;

__attribute__((used)) static void shorten_line_percent(REAL x1, REAL y1, REAL *x2, REAL *y2, REAL percent)
{
    REAL dist, theta, dx, dy;

    if((y1 == *y2) && (x1 == *x2))
        return;

    dist = sqrt((*x2 - x1) * (*x2 - x1) + (*y2 - y1) * (*y2 - y1)) * -percent;
    theta = gdiplus_atan2((*y2 - y1), (*x2 - x1));
    dx = cos(theta) * dist;
    dy = sin(theta) * dist;

    *x2 = *x2 + dx;
    *y2 = *y2 + dy;
}
